<resources>
    <string name="app_name">FollowItUp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Facebook assets-->
    <string name="facebook_app_id">287386941729553</string>
    <string name="fb_login_protocol_scheme">fb287386941729553</string>

    <string name="login_wechat">WeChat</string>

    <string name="action_show_sign_up">Not regiestered? Click me!</string>
    <string name="action_show_login">Back to login</string>
    <string name="action_date_pick">Your awesome date of birth</string>
    <string name="user_id_hint">Your awesome username</string>

</resources>
