<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.followitupapp.followitup.login.LoginActivity">

    <!-- Login progress -->
    <!--<ProgressBar-->
    <!--android:id="@+id/login_progress"-->
    <!--style="?android:attr/progressBarStyleLarge"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:visibility="gone" />-->

    <LinearLayout
        android:id="@+id/app_logo_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:gravity="center">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_email" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_signup_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="6"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/signup_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/userid_textedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_id_hint"
                android:maxLines="1" />

            <LinearLayout
                android:id="@+id/signup_misc_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/signup_date_picker_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="@string/action_date_pick"
                    android:inputType="date"
                    android:onClick="showDatePicker" />

                <Switch
                    android:id="@+id/signup_gender_switch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:thumb="@drawable/sex_toggle_thumb"
                    android:track="@drawable/sex_toggle_track"
                    android:textOff=""
                    android:textOn=""/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/email_login_signup_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_auth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_auth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/login_to_signup_lever_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBottomTextClicked"
            android:text="@string/action_show_sign_up"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
